--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ваша Школа</title>
+    <title>Автосалон</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body>
-    <h1>Добро пожаловать в Вашу Школу</h1>
+    <h1>Добро пожаловать на сайт Автосалона <i>"Мегатрон"</i>  </h1>
     <p><a href="{{ url_for('login') }}">Вход</a></p>
 </body>
 </html>
